--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [windows-2019, windows-2022]
@@ -78,7 +78,7 @@ jobs:
         }
     
     - name: 上传构建产物
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: windows-tools-${{ matrix.os }}-v${{ steps.version.outputs.VERSION }}
         path: dist/*.exe
