--- a/requirements-minimal.txt
+++ b/requirements-minimal.txt
@@ -1,15 +1,8 @@
-# 最小化依赖配置 - 用于解决网络超时问题
-# 仅包含核心系统监控功能
+# 超极简依赖配置 - 仅核心功能
+# 移除所有可能导致网络问题的依赖
 
-# 核心系统监控库
+# 核心系统监控库（必需）
 psutil>=5.9.0
 
-# 基础网络库
-requests>=2.28.0
-
-# Windows特定依赖（轻量级）
+# Windows特定依赖（必需）
 pywin32>=306; sys_platform == "win32"
-
-# 基础配置和日志
-pyyaml>=6.0
-coloredlogs>=15.0
