--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -23,7 +23,7 @@ jobs:
       with:
         python-version: '3.12'
         cache: 'pip'
-        cache-dependency-path: 'requirements-minimal.txt'
+        cache-dependency-path: 'requirements.txt'
     
     - name: 升级pip
       run: python -m pip install --upgrade pip
